# django-dsfr

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOC.md  INSTALL.md  LICENSE  Makefile  README.md  README.rst  example-form.html  example_form.html  form.html  generate_doc.sh  index.html  justfile  publiccode.yml  pyproject.toml  search_data.json
.github/ISSUE_TEMPLATE/: 1-bug.md  2-suggestion.md  3-doc.md  config.yml
.github/workflows/: ci-3-10-11.yml  ci-3-10.yml  ci-3-12-14.yml  ci-3-8.yml  ci.yml  codeql-analysis.yml  deploy-doc.yml  django-3-10.yml  django-3-8.yml  django.yml  publish-package.yml
components/: index.html
components/accordion/: index.html
components/accordion_group/: index.html
components/alert/: index.html
components/back_to_top/: index.html
components/badge/: index.html
components/badge_group/: index.html
components/breadcrumb/: index.html
components/button/: index.html
components/button_group/: index.html
components/callout/: index.html
components/card/: index.html
components/checkbox/: index.html
components/consent/: index.html
components/content/: index.html
components/core/: index.html
components/css/: index.html
components/cursor/: index.html
components/django_messages/: index.html
components/download/: index.html
components/favicon/: index.html
components/file_upload/: index.html
components/follow/: index.html
components/footer/: index.html
components/form/: index.html
components/form_field/: index.html
components/forms/: index.html
components/france_connect/: index.html
components/franceconnect/: index.html
components/header/: index.html
components/highlight/: index.html
components/input/: index.html
components/js/: index.html
components/legacy/: index.html
components/link/: index.html
components/logo/: index.html
components/modal/: index.html
components/navigation/: index.html
components/newsletter_follow/: index.html
components/notice/: index.html
components/pagination/: index.html
components/password/: index.html
components/quote/: index.html
components/radio/: index.html
components/radio_rich/: index.html
components/range/: index.html
components/responsive_medias/: index.html
components/search_bar/: index.html
components/segmented_control/: index.html
components/select/: index.html
components/share/: index.html
components/sidemenu/: index.html
components/skiplinks/: index.html
components/stepper/: index.html
components/summary/: index.html
components/tab/: index.html
components/table/: index.html
components/tag/: index.html
components/theme_modale/: index.html
components/tile/: index.html
components/toggle/: index.html
components/tooltip/: index.html
components/transcription/: index.html
components/translate/: index.html
components/utilites/: index.html
config/: asgi.py  settings.py  urls.py  wsgi.py
doc/: components.md  follow.md  footer.md  forms.md  header.md  usage.md
doc-contributing/: index.html
doc-install/: index.html
doc-usage/: index.html
docs/: index.html
docs/tags/: index.html
dsfr/: admin.py  apps.py  checksums.py  constants.py  context_processors.py  enums.py  fields.py  forms.py  markdown.py  models.py  settings.py  utils.py  widgets.py
dsfr/fixtures/: init.json
dsfr/migrations/: 0001_initial.py  0002_auto_20211209_1557.py  0003_alter_dsfrconfig_accessibility_status.py  0004_dsfrconfig_beta_tag_dsfrconfig_operator_logo_alt_and_more.py  0005_dsfrconfig_notice.py  0006_alter_dsfrconfig_accessibility_status.py  0007_dsfrconfig_newsletter_description_and_more.py  0008_alter_dsfrsocialmedia_options_dsfrconfig_language_and_more.py  0009_dsfrconfig_notice_type_alter_dsfrconfig_notice.py  0010_dsfrconfig_notice_icon_class_alter_dsfrconfig_notice_and_more.py  0011_rename_notice_dsfrconfig_notice_title.py  0012_dsfrconfig_notice_description_and_more.py
dsfr/static/: formsets.js
dsfr/templatetags/: dsfr_md_tags.py  dsfr_tags.py
dsfr/test/: test_config.py  test_enums.py  test_fields.py  test_form_field_snippets.py  test_forms.py  test_templatetags.py  test_templatetags_md.py  test_utils.py  test_views.py
example/: settings.py  urls.py
example/static_pages/: index.html
example_app/: admin.py  apps.py  dsfr_components.py  forms.py  models.py  tag_specifics.py  tests.py  urls.py  utils.py  views.py
example_app/migrations/: 0001_initial.py  0002_alter_author_options_alter_book_options_and_more.py  0003_alter_book_author.py  0004_alter_book_number_of_pages.py
example_app/test/: test_views.py
form/: index.html
form/example/: index.html
form/example-formset/: index.html
formset/: index.html
formsets/: index.html
resources/: markdown.html
resources/colors/: index.html
resources/icons/: index.html  templatetags.html
resources/pictograms/: index.html
scripts/: download_latest.sh
search/: index.html
static/: formsets.js
static/js/: common.js  formsets.js
static/json/: search_data.json
static/lib/: fuse.min.js
tags/: index.html
tags/accordion/: index.html
tags/accordion_group/: index.html
tags/alert/: index.html
tags/back_to_top/: index.html
tags/badge/: index.html
tags/badge_group/: index.html
tags/breadcrumb/: index.html
tags/button/: index.html
tags/callout/: index.html
tags/card/: index.html
tags/checkbox/: index.html
tags/consent/: index.html
tags/core/: index.html
tags/css/: index.html
tags/cursor/: index.html
tags/django_messages/: index.html
tags/download/: index.html
tags/favicon/: index.html
tags/file_upload/: index.html
tags/form/: index.html
tags/form_field/: index.html
tags/forms/: index.html
tags/franceconnect/: index.html
tags/highlight/: index.html
tags/input/: index.html
tags/js/: index.html
tags/legacy/: index.html
tags/link/: index.html
tags/logo/: index.html
tags/media_content/: index.html
tags/modal/: index.html
tags/navigation/: index.html
tags/newsletter_follow/: index.html
tags/notice/: index.html
(+239 files in other folders)
