[project]
name = "django-dsfr"
version = "3.1.0"
description = "Integrate the French government Design System into a Django app"
authors = [{ name = "Sylvain Boissel", email = "sylvain.boissel@beta.gouv.fr" }]
requires-python = "<4.0,>=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "django",
    "dsfr",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "Django>4.2.17",
    "requests<3.0.0,>=2.26.0",
    "django-widget-tweaks<2.0.0,>=1.4.12",
    "django-crispy-forms<3.0,>=2.0",
]

[project.urls]
documentation = "https://numerique-gouv.github.io/django-dsfr"
homepage = "https://github.com/numerique-gouv/django-dsfr"
repository = "https://github.com/numerique-gouv/django-dsfr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
    "coverage[toml]>=7.10.5",
    "django-distill>=3.2.7",
    "docutils>=0.17.1",
    "pytest>=8.4.1",
    "djlint>=1.36.4",
    "black>=25.1.0",
    "django-csp>=4.0",
    "pre-commit>=4.3.0",
    "bandit>=1.8.6",
    "markdown>=3.8.2",
    "pygments>=2.19.2",
    "beautifulsoup4>=4.13.5",
    "lxml>=6.0.1",
    "setuptools>=80.9.0",
    "twine>=6.1.0",
    "rust-just>=1.42.4",
    "ipython>=8.37.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "dsfr",
    "LICENSE",
    "README.md",
    "dsfr/static/dsfr/dist/*/*.*",
]

[tool.hatch.build.targets.wheel]
include = [
    "dsfr",
    "LICENSE",
    "README.md",
    "dsfr/static/dsfr/dist/*/*.*",
]

[tool.coverage.run]
omit = [
    "manage.py",
    "config/settings_test.py",
    "config/asgi.py",
    "config/wsgi.py",
    "*/__init__.py",
    "*/migrations/*.py",
    "*/tests/*.py",
]

[tool.djlint]
line_break_after_multiline_tag = true
max_blank_lines = 1
ignore = "H030,H031,H006"
indent = 2

[tool.djlint.per-file-ignores]
"header.html" = "D018"
"footer.html" = "D018"
"page_pictograms.html" = "D018"
"page_component.html" = "T002"

[tool.pyright]
reportAttributeAccessIssue = false
reportOperatorIssue = false
reportOptionalMemberAccess = false
